add basic html layout
Co-authored-by: chlobear8 <chlobear8@users.noreply.github.com>
Co-authored-by: nsncowan <nsncowan@users.noreply.github.com>
Co-authored-by: Geoffrey Gao <geoffreygao1@users.noreply.github.com>
Co-authored-by: b y <brianyoder@gmail.com>

--- a/src/index.html
+++ b/src/index.html
@@ -1,1 +1,16 @@
-//
+<html lang="en-US">
+  <head>
+    <title>Recipe Finder</title>
+  </head>
+  <body>
+    <div class="container">
+      <h1> Welcome to the pantry!</h1>
+      
+      <form>
+
+        <button type="submit"  id="submitForm">Find Recipe</button>
+      </form>
+      <p id="showResponse"></p>
+    </div>
+  </body>
+  </html>
