--- a/src/index.html
+++ b/src/index.html
@@ -17,13 +17,26 @@
           <label for="ingredientInput">Input ingredients you wish to use:</label>
           <input id="ingredientInput" type="text" name="ingredientInput">
       
-
           <label for="mealSelection">Select type of meal:</label>
           <select name="mealSelection" id="mealSelection">
             <option value="dinner">Dinner</option>
             <option value="lunch">Lunch Yen</option>
             <option value="breakfast">Breakfast</option>
           </select>
+
+          <label for="health">Select health consideration:</label>
+          <select name="health" id="health">
+            <option value="vegetarian">Vegetarian</option>
+            <option value="vegan">Vegan</option>
+            <option value="pescatarian">Pescatarian</option>
+          </select>
+
+          <label for="cookTime">Enter a MAX prep-time:</label>
+          <input id="cookTime" type="number" name="cookTime">
+
+          <label for="excluded">Enter ingredients you wish to exclude:</label>
+          <input id="excluded" type="text" name="excluded">
+
           <button type="submit" id="submitForm">Find Recipe</button>
         </form>
         <p id="showResponse"></p>
