--- a/src/index.html
+++ b/src/index.html
@@ -20,8 +20,9 @@
 
           <label for="mealSelection">Select type of meal:</label>
           <select name="mealSelection" id="mealSelection">
+            <option></option>
             <option value="dinner">Dinner</option>
-            <option value="lunch">Lunch Yen</option>
+            <option value="lunch">Lunch</option>
             <option value="breakfast">Breakfast</option>
           </select>
           <button type="submit" id="submitForm">Find Recipe</button>
