--- a/src/index.html
+++ b/src/index.html
@@ -19,13 +19,15 @@
       
           <label for="mealSelection">Select type of meal:</label>
           <select name="mealSelection" id="mealSelection">
+            <option value="">Meal-Choice</option>
             <option value="dinner">Dinner</option>
-            <option value="lunch">Lunch Yen</option>
+            <option value="lunch">Lunch</option>
             <option value="breakfast">Breakfast</option>
           </select>
 
           <label for="health">Select health consideration:</label>
           <select name="health" id="health">
+            <option value="">Health Option</option>
             <option value="vegetarian">Vegetarian</option>
             <option value="vegan">Vegan</option>
             <option value="pescatarian">Pescatarian</option>
