--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,18 @@
             <option value="lunch">Lunch</option>
             <option value="breakfast">Breakfast</option>
           </select>
+          <label for="healthSelection">Select option of diet type:</label>
+          <select name="healthSelection" id="healthSelection">
+            <option></option>
+            <option value="dairy-free">Dairy-Free</option>
+            <option value="gluten-free">Gluten-Free</option>
+            <option value="keto-friendly">Keto-Friendly</option>
+            <option value="kosher">Kosher</option>
+            <option value="vegan">Vegan</option>
+            <option value="vegitarian">Vegitarian</option>
+          </select>
+
+          
           <button type="submit" id="submitForm">Find Recipe</button>
         </form>
         <p id="showResponse"></p>
