--- a/src/index.html
+++ b/src/index.html
@@ -16,16 +16,18 @@
         <form>
           <label for="ingredientInput">Input ingredients you wish to use:</label>
           <input id="ingredientInput" type="text" name="ingredientInput">
-      
-
-          <label for="mealSelection">Select type of meal:</label>
+          <br>
+          <br>
+          <label for="mealSelection">Select type of meal (optional):</label>
           <select name="mealSelection" id="mealSelection">
             <option></option>
             <option value="dinner">Dinner</option>
             <option value="lunch">Lunch</option>
             <option value="breakfast">Breakfast</option>
           </select>
-          <label for="healthSelection">Select option of diet type:</label>
+          <br>
+          <br>
+          <label for="healthSelection">Select option of diet type (optional):</label>
           <select name="healthSelection" id="healthSelection">
             <option></option>
             <option value="dairy-free">Dairy-Free</option>
@@ -35,6 +37,8 @@
             <option value="vegan">Vegan</option>
             <option value="vegitarian">Vegitarian</option>
           </select>
+          <br>
+          <br>
 
           
           <button type="submit" id="submitForm">Find Recipe</button>
