--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
           </select>
 
           <label for="cookTime">Enter a MAX prep-time:</label>
-          <input id="cookTime" type="number" name="cookTime">
+          <input id="cookTime" type="number" min="0" name="cookTime">
 
           <label for="excluded">Enter ingredients you wish to exclude:</label>
           <input id="excluded" type="text" name="excluded">
