--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
           <input id="ingredientInput" type="text" name="ingredientInput">
           <br>
           <br>
-          <label for="mealSelection">Select type of meal:</label>g
+          <label for="mealSelection">Select type of meal:</label>
           <select name="mealSelection" id="mealSelection">
             <option value=""></option>
             <option value="dinner">Dinner</option>
