Added session storage functionality to store ingredients list

--- a/src/index.html
+++ b/src/index.html
@@ -15,39 +15,47 @@
       </div>
       <h1> Welcome to the pantry!</h1>
 
-      <form>
-        <label for="ingredientInput">Input ingredients you wish to use:</label>
-        <input id="ingredientInput" type="text" name="ingredientInput">
-        <br>
-        <br>
-        <label for="mealSelection">Select type of meal:</label>
-        <select name="mealSelection" id="mealSelection">
-          <option value=""></option>
-          <option value="dinner">Dinner</option>
-          <option value="lunch">Lunch</option>
-          <option value="breakfast">Breakfast</option>
-        </select>
-        <br>
-        <br>
-        <label for="health">Select health consideration:</label>
-        <select name="health" id="health">
-          <option></option>
-          <option value="">Health Option</option>
-          <option value="vegetarian">Vegetarian</option>
-          <option value="vegan">Vegan</option>
-          <option value="pescatarian">Pescatarian</option>
-        </select>
-        <br>
-        <br>
-        <label for="cookTime">Enter a MAX prep-time:</label>
-        <input id="cookTime" type="number" min=0 name="cookTime">
-        <br>
-        <br>
-        <label for="excluded">Enter ingredients you wish to exclude:</label>
-        <input id="excluded" type="text" name="excluded">
-        <br>
-        <br>
-        <button type="submit" id="submitForm">Find Recipe</button>
+      <form id="inputForm">
+        <div>
+          <label for="ingredientInput">Input ingredients you wish to use:</label>
+          <input id="ingredientInput" type="text" name="ingredientInput">
+          <button type="button" id="addIngredientButton">Add Ingredient</button>
+        </div>
+        <p>List of Ingredients:</p>
+        <div>
+          <ul id="listOfIngredients">
+          </ul>
+        </div>
+        <div>
+          <label for="mealSelection">Select type of meal:</label>
+          <select name="mealSelection" id="mealSelection">
+            <option value=""></option>
+            <option value="dinner">Dinner</option>
+            <option value="lunch">Lunch</option>
+            <option value="breakfast">Breakfast</option>
+          </select>
+        </div>
+        <div>
+          <label for="health">Select health consideration:</label>
+          <select name="health" id="health">
+            <option></option>
+            <option value="">Health Option</option>
+            <option value="vegetarian">Vegetarian</option>
+            <option value="vegan">Vegan</option>
+            <option value="pescatarian">Pescatarian</option>
+          </select>
+        </div>
+        <div>
+          <label for="cookTime">Enter a MAX prep-time:</label>
+          <input id="cookTime" type="number" min=0 name="cookTime">
+        </div>
+        <div>
+          <label for="excluded">Enter ingredients you wish to exclude:</label>
+          <input id="excluded" type="text" name="excluded">
+        </div>
+        <div>
+          <button type="submit" id="submitForm">Find Recipe</button>
+        </div>
       </form>
       <p id="showResponse"></p>
 
