add favorites html and column styling

--- a/src/favorites.html
+++ b/src/favorites.html
@@ -8,8 +8,8 @@
   <div id="back">
     <div class="container">
       <div class="topnav">
-        <a class="active" href="#home">Home</a>
-        <a href="#blog">Blog</a>
+        <a href="index.html">Home</a>
+        <a class="active" href="favorites.html">Favorites/Grocery List</a>
         <a href="#contact">Contact</a>
         <a href="#about">About</a>
     </div>
@@ -25,7 +25,7 @@
         <input id="shoppingInput" type="text" name="shoppingInput">
         <br>
         <br>
-        <button type="submit" id="submitForm">Find Recipe</button>
+        <button type="submit" id="submitInput">Add to list!</button>
       </div>
     </div>
   </div>
