--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
       <div class="container">
         <div class="topnav">
           <a class="active" href="#home">Home</a>
-          <a href="#blog">Blog</a>
+          <a href="favorites.html">Favorites/Grocery List</a>
           <a href="#contact">Contact</a>
           <a href="#about">About</a>
         </div>
