--- a/src/index.html
+++ b/src/index.html
@@ -7,14 +7,23 @@
 <body>
   <div id="back">
     <div class="container">
-      <div class="topnav">
-        <a class="active" href="#home">Home</a>
-        <a href="#blog">Blog</a>
-        <a href="#contact">Contact</a>
-        <a href="#about">About</a>
-      </div>
-      <h1> Welcome to the pantry!</h1>
+      <nav class="topnav">
+        <div class="siteTitle">Site-Name</div>
+        <a href="#" class="menu-button">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+        </a>
 
+        <div class="navbar-links">
+          <a class="active" href="#home">Home</a>
+          <a href="src\pages\blog.html">Blog</a>
+          <a href="src\pages\contact.html">Contact</a>
+          <a href="src\pages\about.html">About</a>
+        </div>
+      </nav>
+
+      <h1> Welcome to the pantry!</h1>
       <form>
         <label for="ingredientInput">Input ingredients you wish to use:</label>
         <input id="ingredientInput" type="text" name="ingredientInput">
