--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
 
         <div class="navbar-links">
           <a class="active" href="#home">Home</a>
-          <a href="src\pages\blog.html">Blog</a>
+          <a href="blog.html">Blog</a>
           <a href="src\pages\contact.html">Contact</a>
           <a href="src\pages\about.html">About</a>
         </div>
