--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
         <div class="navbar-links">
           <a class="active" href="#home">Home</a>
           <a href="blog.html">Blog</a>
-          <a href="src\pages\contact.html">Contact</a>
+          <a href=".\src\contact.html">Contact</a>
           <a href="src\pages\about.html">About</a>
         </div>
       </nav>
