add postit styling

--- a/src/favorites.html
+++ b/src/favorites.html
@@ -20,12 +20,13 @@
       </div>
 
       <div class="column">
-      <form>
+      <form id="postit" class="rotate">
         <label for="shoppingInput">Input ingredients you wish to add to shopping list:</label>
         <input id="shoppingInput" type="text" name="shoppingInput">
         <br>
         <br>
         <button type="submit" id="submitInput">Add to list!</button>
+      </form>
       </div>
     </div>
   </div>
