add header to html

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,10 @@
           <a href="#contact">Contact</a>
           <a href="#about">About</a>
         </div>
-        <h1> Welcome to the pantry!</h1>
+        <div class="header">
+          <h1>Mama & PawPaw's Kitchen</h1>
+          <h3>-find recipes from ingredients you have-</h3>>
+        </div>
       
         <form>
           <label for="ingredientInput">Input ingredients you wish to use:</label>
