--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,9 @@
 <html lang="en-US">
   <head>
     <title>Recipe Finder</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant:ital@1&family=Montserrat:wght@500&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="back">
@@ -13,7 +16,7 @@
         </div>
         <div class="header">
           <h1>Mama & PawPaw's Kitchen</h1>
-          <h3>-find recipes from ingredients you have-</h3>>
+          <h4>-find recipes from ingredients you have-</h3>
         </div>
       
         <form>
