--- a/src/index.html
+++ b/src/index.html
@@ -19,9 +19,9 @@
         <div class="navlinks">
           <ul>
             <li><a class="active" href="#home">Home</a></li>
-            <li><a href="./pages/blog.html">Blog</a></li>
-            <li><a href="src\pages\contact.html">Contact</a></li>
-            <li><a href="src\pages\about.html">About</a></li>
+            <li><a href="src\blog.html">Blog</a></li>
+            <li><a href="src\contact.html">Contact</a></li>
+            <li><a href="src\about.html">About</a></li>
         </ul>
         </div>
       </nav>
