--- a/src/favorites.html
+++ b/src/favorites.html
@@ -16,12 +16,12 @@
 
     <div class="row">
       <div class="column">
-      <h1>Save your favorite recipes here:</h1>
+      <h1>Your saved favorites!</h1>
       </div>
 
-      <div class="column">
-      <form id="postit" class="rotate">
-        <label for="shoppingInput">Input ingredients you wish to add to shopping list:</label>
+      <div class="column" id="postit" >
+      <form class="rotate">
+        <label for="shoppingInput">Shopping List:</label>
         <input id="shoppingInput" type="text" name="shoppingInput">
         <br>
         <br>
