add navbar functionality

--- a/src/favorites.html
+++ b/src/favorites.html
@@ -6,13 +6,24 @@
 
 <body>
   <div id="back">
-    <div class="container">
-      <div class="topnav">
-        <a href="index.html">Home</a>
-        <a class="active" href="favorites.html">Favorites/Grocery List</a>
-        <a href="#contact">Contact</a>
-        <a href="#about">About</a>
-    </div>
+    <nav class="navbar">
+      <div class="site-title">Site-Name</div>
+      
+      <a href="#" class="menubutton">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+      </a>
+
+      <div class="navlinks">
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a class="active" href="favorites.html">Favorites</a></li>
+          <li><a href="contact.html">Contact</a></li>
+          <li><a href="about.html">About</a></li>
+      </ul>
+      </div>
+    </nav>
 
     <div class="row">
       <div class="column">
