--- a/src/contact.html
+++ b/src/contact.html
@@ -4,6 +4,24 @@
     <title>Contact</title>
   </head>
   <body>
+    <nav class="navbar">
+      <div class="site-title">Site-Name</div>
+      
+      <a href="#" class="menubutton">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+      </a>
+
+      <div class="navlinks">
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="favorites.html">Favorites</a></li>
+          <li><a class="active" href="contact.html">Contact</a></li>
+          <li><a href="about.html">About</a></li>
+      </ul>
+      </div>
+    </nav>
     <h1>Contact</h1>
   </body>
 </html>
