--- a/src/index.html
+++ b/src/index.html
@@ -18,10 +18,10 @@
 
         <div class="navlinks">
           <ul>
-            <li><a class="active" href="#home">Home</a></li>
-            <li><a href="src\favorites.html">Favorites</a></li>
-            <li><a href="src\contact.html">Contact</a></li>
-            <li><a href="src\about.html">About</a></li>
+            <li><a class="active" href="index.html">Home</a></li>
+            <li><a href="favorites.html">Favorites</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="about.html">About</a></li>
         </ul>
         </div>
       </nav>
