begin flexbox styling for recipes

--- a/src/index.html
+++ b/src/index.html
@@ -70,7 +70,10 @@
           <button type="submit" id="submitForm">Find Recipe</button>
         </div>
       </form>
-      <p id="showResponse"></p>
+      <div id="showResponse"></div>
+
+      <div class="displaySection"></div>
+      
 
     </div>
   </div>
