WIP: format flexbox for search results

--- a/src/index.html
+++ b/src/index.html
@@ -72,7 +72,7 @@
       </form>
       <div id="showResponse"></div>
 
-      <div class="displaySection"></div>
+      <!-- <div class="displaySection"></div> -->
       
 
     </div>
