--- a/src/index.html
+++ b/src/index.html
@@ -38,10 +38,9 @@
         </div>
       
         <div>
-          <p>List of Ingredients:</p>
-          <ul id="listOfIngredients">
-          </ul>
+          <ul id="listOfIngredients"></ul>
         </div>
+        
         <div class="filters">
           <div class="menu">
             <label for="mealSelection">Select type of meal:</label>
