add css card styling

--- a/src/index.html
+++ b/src/index.html
@@ -70,7 +70,8 @@
           <button type="submit" id="submitForm">Find Recipe</button>
         </div>
       </form>
-      <p id="showResponse"></p>
+
+      <div class="container2" id="showResponse"></div>
 
     </div>
   </div>
