--- a/src/favorites.html
+++ b/src/favorites.html
@@ -32,6 +32,10 @@
 
       <div class="column">
         <div id="postit" >
+          <div>
+            <ul id="shoppingList">
+            </ul>
+          </div>
         </div>
       </div>
 
