--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,7 @@
   <div id="back">
     <div class="container">
       <nav class="navbar">
-        <div class="site-title">Digital Dining</div>
-          <p id="subtitle">An online recipe builder</p>
+        <div class="site-title">Site-Name</div>
         
         <a href="#" class="menubutton">
           <span class="bar"></span>
@@ -79,54 +78,6 @@
 
       <div class="container2" id="showResponse"></div>
 
-      <div id="formdiv">
-        <h1> Welcome to the pantry!</h1>
-
-        <form id="inputForm">
-            <label for="ingredientInput">Input ingredients you wish to use:</label>
-            <input id="ingredientInput" type="text" name="ingredientInput">
-            <button type="button" id="addIngredientButton">Add Ingredient</button>
-          </div>
-          <p>List of Ingredients:</p>
-          <div>
-            <ul id="listOfIngredients">
-            </ul>
-          </div>
-          <div>
-            <label for="mealSelection">Select type of meal:</label>
-            <select name="mealSelection" id="mealSelection">
-              <option value=""></option>
-              <option value="dinner">Dinner</option>
-              <option value="lunch">Lunch</option>
-              <option value="breakfast">Breakfast</option>
-            </select>
-          </div>
-          <div>
-            <label for="health">Select health consideration:</label>
-            <select name="health" id="health" class: >
-              <option></option>
-              <option value="">Health Option</option>
-              <option value="vegetarian">Vegetarian</option>
-              <option value="vegan">Vegan</option>
-              <option value="pescatarian">Pescatarian</option>
-            </select>
-          </div>
-          <div>
-            <label for="cookTime">Enter a MAX prep-time:</label>
-            <input id="cookTime" type="number" min=0 name="cookTime">
-          </div>
-          <div>
-            <label for="excluded">Enter ingredients you wish to exclude:</label>
-            <input id="excluded" type="text" name="excluded">
-          </div>
-          <div>
-            <button type="submit" id="submitForm">Find Recipe</button>
-          </div>
-        </form>
-      </div>
-      <div id="recipeCards">
-        <p id="showResponse"></p>
-      </div>
     </div>
   </div>
 </body>
