--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <div id="back">
     <div class="container">
       <nav class="navbar">
-        <div class="site-title">Site-Name</div>
+        <div class="site-title">Digital Dining</div>
         
         <a href="#" class="menubutton">
           <span class="bar"></span>
