add subtitle to index.html

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
     <div class="container">
       <nav class="navbar">
         <div class="site-title">Digital Dining</div>
+          <p id="subtitle">An online recipe builder</p>
         
         <a href="#" class="menubutton">
           <span class="bar"></span>
