remove welcome message

--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
       </nav>
 
       <div class="welcome">
-        <h1> Welcome to the pantry!</h1>
+        <!-- <h1> Welcome to the pantry!</h1> -->
       </div>
       
       <form id="inputForm">
