--- a/src/favorites.html
+++ b/src/favorites.html
@@ -28,6 +28,9 @@
     <div class="row">
       <div class="column" id="favorites">
       <h1>Your saved favorites!</h1>
+        <div>
+          <ul id="faves"></ul>
+        </div>
       </div>
 
       <div class="column">
@@ -41,11 +44,12 @@
 
       <div class="column">
         <form id="shoppingInput">
-        <label for="shoppingInput">Shopping List:</label>
-        <input id="shoppingInput" type="text" name="shoppingInput">
+        <label for="shoppingInputText">Shopping List:</label>
+        <input id="shoppingInputText" type="text" name="shoppingText">
         <br>
         <br>
-        <button type="submit" id="submitInput">Add to list!</button>
+        <button type="button" id="submitInput">Add to list!</button>
+        <button type="button" id="clearInput">Clear list!</button>
         </form>
       </div>
     </div>
