--- a/src/index.html
+++ b/src/index.html
@@ -46,8 +46,8 @@
         <div class="filters">
           <div class="menu">
             <label for="mealSelection">Select type of meal:</label>
-            <select name="mealSelection" id="mealSelection">
-              <option value=""></option>
+            <select name="mealSelection" id="mealSelection" class="option">
+              <option value="">Any</option>
               <option value="dinner">Dinner</option>
               <option value="lunch">Lunch</option>
               <option value="breakfast">Breakfast</option>
@@ -55,8 +55,8 @@
           </div>
           <div class="menu">
             <label for="health">Select health consideration:</label>
-            <select name="health" id="health">
-              <option></option>
+            <select name="health" id="health" class="option">
+              <option value="">Any</option>
               <option value="vegetarian">Vegetarian</option>
               <option value="vegan">Vegan</option>
               <option value="pescatarian">Pescatarian</option>
@@ -64,11 +64,11 @@
           </div>
           <div class="menu">
             <label for="cookTime">Enter a MAX prep-time:</label>
-            <input id="cookTime" type="number" min=0 name="cookTime" >
+            <input id="cookTime" type="number" min=0 name="cookTime" placeholder="minutes" class="option">
           </div>
           <div class="menu">
             <label for="excluded">Enter ingredients you wish to exclude:</label>
-            <input id="excluded" type="text" name="excluded" >
+            <input id="excluded" type="text" name="excluded" placeholder="none" class="option">
           </div>
         </div>
         <hr class="top">
