edit css for g class and h1

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,10 @@
   <div id="back">
     <div class="container">
       <nav class="navbar">
-        <div class="site-title">Digital Dinin<span id="g">g</span></div>
+        <div class="site-title">
+          <h1>Digital Dinin<span class="g">g</span>
+          </h1>
+        </div>
         <p id="subtitle">An online recipe builder</p>
         <a href="#" class="menubutton">
           <span class="bar"></span>
