--- a/src/favorites.html
+++ b/src/favorites.html
@@ -8,7 +8,7 @@
   <div id="back">
     <nav class="navbar">
       <div class="site-title">Site-Name</div>
-      
+
       <a href="#" class="menubutton">
         <span class="bar"></span>
         <span class="bar"></span>
@@ -21,20 +21,18 @@
           <li><a class="active" href="favorites.html">Favorites</a></li>
           <li><a href="contact.html">Contact</a></li>
           <li><a href="about.html">About</a></li>
-      </ul>
+        </ul>
       </div>
     </nav>
 
     <div class="row">
       <div class="column" id="favorites">
-      <h1>Your saved favorites!</h1>
-        <div>
-          <ul id="faves"></ul>
-        </div>
+        <h1>Your saved favorites!</h1>
+        <div class="container2" id="showResponse"></div>
       </div>
 
       <div class="column">
-        <div id="postit" >
+        <div id="postit">
           <div>
             <ul id="shoppingList">
             </ul>
@@ -44,15 +42,16 @@
 
       <div class="column">
         <form id="shoppingInput">
-        <label for="shoppingInputText">Shopping List:</label>
-        <input id="shoppingInputText" type="text" name="shoppingText">
-        <br>
-        <br>
-        <button type="button" id="submitInput">Add to list!</button>
-        <button type="button" id="clearInput">Clear list!</button>
+          <label for="shoppingInputText">Shopping List:</label>
+          <input id="shoppingInputText" type="text" name="shoppingText">
+          <br>
+          <br>
+          <button type="button" id="submitInput">Add to list!</button>
+          <button type="button" id="clearInput">Clear list!</button>
         </form>
       </div>
     </div>
   </div>
 </body>
+
 </html>
