--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,7 @@
     <div class="container">
       <nav class="navbar">
         <div class="site-title">
-          <h1>Digital Dinin<span class="g">g</span>
-          </h1>
+          <h1>Di<span class="g">g</span>ital Dining</h1>
         </div>
         <p id="subtitle">An online recipe builder</p>
         <a href="#" class="menubutton">
