refactor for logo on each page

--- a/src/favorites.html
+++ b/src/favorites.html
@@ -6,14 +6,17 @@
 
 <body>
   <div id="back">
-    <nav class="navbar">
-      <div class="site-title">Site-Name</div>
-      
-      <a href="#" class="menubutton">
-        <span class="bar"></span>
-        <span class="bar"></span>
-        <span class="bar"></span>
-      </a>
+    <div class="container">
+      <nav class="navbar">
+        <div class="site-title">
+          <h1>Di<span class="g">g</span>ital Dining</h1>
+        </div>
+        <p id="subtitle">An online recipe builder</p>
+        <a href="#" class="menubutton">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+        </a>
 
       <div class="navlinks">
         <ul>
@@ -27,7 +30,7 @@
 
     <div class="row">
       <div class="column" id="favorites">
-      <h1>Your saved favorites!</h1>
+      <!--<h1>Your saved favorites!</h1>-->
         <div>
           <ul id="faves"></ul>
         </div>
