--- a/src/about.html
+++ b/src/about.html
@@ -5,15 +5,18 @@
 </head>
 
 <body>
-  <nav class="navbar">
-    <div class="site-title">Site-Name</div>
-    
-    <a href="#" class="menubutton">
-      <span class="bar"></span>
-      <span class="bar"></span>
-      <span class="bar"></span>
-    </a>
-
+  <div id="back">
+    <div class="container">
+      <nav class="navbar">
+        <div class="site-title">
+          <h1>Di<span class="g">g</span>ital Dining</h1>
+        </div>
+        <p id="subtitle">An online recipe builder</p>
+        <a href="#" class="menubutton">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+        </a>
     <div class="navlinks">
       <ul>
         <li><a href="index.html">Home</a></li>
@@ -23,6 +26,6 @@
     </ul>
     </div>
   </nav>
-  <h1>About</h1>
+  
 </body>
 </html>
