--- a/src/contact.html
+++ b/src/contact.html
@@ -4,14 +4,18 @@
     <title>Contact</title>
   </head>
   <body>
-    <nav class="navbar">
-      <div class="site-title">Site-Name</div>
-      
-      <a href="#" class="menubutton">
-        <span class="bar"></span>
-        <span class="bar"></span>
-        <span class="bar"></span>
-      </a>
+    <div id="back">
+      <div class="container">
+        <nav class="navbar">
+          <div class="site-title">
+            <h1>Di<span class="g">g</span>ital Dining</h1>
+          </div>
+          <p id="subtitle">An online recipe builder</p>
+          <a href="#" class="menubutton">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+          </a>
 
       <div class="navlinks">
         <ul>
@@ -22,6 +26,5 @@
       </ul>
       </div>
     </nav>
-    <h1>Contact</h1>
   </body>
 </html>
