--- a/src/contact.html
+++ b/src/contact.html
@@ -1,9 +1,11 @@
 <html lang="en-US">
 
-  <head>
-    <title>Contact</title>
-  </head>
-  <body>
+<head>
+  <title>About</title>
+</head>
+
+<body>
+  <div class="container">
     <nav class="navbar">
       <div class="site-title">Site-Name</div>
       
@@ -17,11 +19,12 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="favorites.html">Favorites</a></li>
-          <li><a class="active" href="contact.html">Contact</a></li>
-          <li><a href="about.html">About</a></li>
+          <li><a  href="contact.html">Contact</a></li>
+          <li><a class="active" href="about.html">About</a></li>
       </ul>
       </div>
     </nav>
-    <h1>Contact</h1>
-  </body>
+    <h1>About</h1>
+  </div>
+</body>
 </html>
