add contact pg styles

--- a/src/contact.html
+++ b/src/contact.html
@@ -3,7 +3,7 @@
   <head>
     <title>Contact</title>
   </head>
-  <body>
+  <body class="contact">
     <nav class="navbar">
       <div class="site-title">Site-Name</div>
       
@@ -22,6 +22,24 @@
       </ul>
       </div>
     </nav>
-    <h1>Contact</h1>
+    <div class="contacts layer">
+      <h1> WE ARE HUNGRY TO HEAR FROM YOU!</h1> 
+       <h3>Email us with any questions of inquiries. We would be happy to anser your questions and hear any feedback.</h3> 
+      <form class="form-input">
+        <label for="name">NAME:</label>
+          <input id="name" type="text" name="name">
+          <br>
+          <label for="email">E-MAIL:</label>
+          <input id="email" type="text" name="email">
+          <br>
+          <label for="subject">SUBJECT:</label>
+          <input id="subject" type="text" name="subject">
+          <br>
+          <label for="message">MESSAGE:</label>
+          <input id="message" type="text" name="message">
+          <br>
+        <button type="button" id="contact-us">SEND</button>
+      </form>
+    </div>
   </body>
 </html>
