WIP styling post it

--- a/src/favorites.html
+++ b/src/favorites.html
@@ -27,32 +27,20 @@
 
     <div class="row">
       <div class="column" id="favorites">
-      <h1>Your saved favorites!</h1>
-        <div>
-          <ul id="faves"></ul>
-        </div>
+      <h1 class="fave">Your saved favorites!</h1>
       </div>
 
-      <div class="column">
-        <div id="postit" >
-          <div>
-            <ul id="shoppingList">
-            </ul>
-          </div>
-        </div>
-      </div>
-
-      <div class="column">
-        <form id="shoppingInput">
-        <label for="shoppingInputText">Shopping List:</label>
-        <input id="shoppingInputText" type="text" name="shoppingText">
+      <div class="column" id="postit" >
+      <form id="shop">
+        <label for="shoppingInput" id="shoppingInput">Shopping List:</label>
+        <input  type="text" name="shoppingInputText" id="shoppingInputText">
         <br>
         <br>
-        <button type="button" id="submitInput">Add to list!</button>
-        <button type="button" id="clearInput">Clear list!</button>
-        </form>
+        <button type="submit" id="submitInput">Add to list!</button>
+      </form>
       </div>
     </div>
   </div>
 </body>
+
 </html>
