--- a/src/favorites.html
+++ b/src/favorites.html
@@ -33,7 +33,7 @@
       <div class="column" id="postit" >
       <form id="shop">
         <label for="shoppingInput" id="shoppingInput">Shopping List:</label>
-        <input  type="text" name="shoppingInputText" id="shoppingInputText">
+        <input  type="text" name="shoppingInput" id="shoppingInputText">
         <br>
         <br>
         <button type="submit" id="submitInput">Add to list!</button>
