Added menu class to style button

--- a/src/favorites.html
+++ b/src/favorites.html
@@ -34,24 +34,22 @@
           <div class="container2" id="showResponse"></div>
         </div>
 
-      <div class="column">
-        <div id="postit" >
-          <div id="shop">
-            <ul id="shoppingList">
-            </ul>
-          </div>
-          <form id="shoppingInput">
-            <label for="shoppingInputText">Shopping List:</label>
-            <input id="shoppingInputText" type="text" name="shoppingText">
-            <br>
-            <br>
-            <button type="button" id="submitInput">Add to list!</button>
-            <button type="button" id="clearInput">Clear list!</button>
+        <div class="column">
+          <div id="postit">
+            <div id="shop">
+              <ul id="shoppingList">
+              </ul>
+            </div>
+            <form id="shoppingInput" class="menu">
+              <label for="shoppingInputText">Shopping List:</label>
+              <input id="shoppingInputText" type="text" name="shoppingText">
+              <button type="button" id="submitInput">Add to list!</button>
+              <button type="button" id="clearInput">Clear list!</button>
             </form>
+          </div>
         </div>
       </div>
     </div>
-  </div>
 </body>
 
 </html>
