--- a/src/contact.html
+++ b/src/contact.html
@@ -3,6 +3,7 @@
 <head>
   <title>Contact</title>
 </head>
+
 <body class="contact">
   <div id="back">
     <div class="container">
@@ -29,10 +30,11 @@
       </nav>
 
       <div class="layer">
-        <h2> WE ARE HUNGRY TO HEAR FROM YOU!</h1> 
-        <h3>Email us with any questions of inquiries. We would be happy to anser your questions and hear any feedback.</h3> 
-        <form class="form-input">
-          <label for="name">NAME:</label>
+        <h2> WE ARE HUNGRY TO HEAR FROM YOU!</h1>
+          <h3>Email us with any questions of inquiries. We would be happy to answer your questions and hear any
+            feedback.</h3>
+          <form class="form-input">
+            <label for="name">NAME:</label>
             <input id="name" type="text" name="name">
             <br>
             <label for="email">E-MAIL:</label>
@@ -44,10 +46,11 @@
             <label for="message">MESSAGE:</label>
             <input id="message" type="text" name="message">
             <br>
-          <button type="button" id="contact-us">SEND</button>
-        </form>
+            <button type="button" id="contact-us">SEND</button>
+          </form>
       </div>
     </div>
   </div>
 </body>
+
 </html>
