Cleaned up spacing

--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,8 @@
       </div>
     </nav>
 
-    <div class="welcome"></div>
+    <div class="welcome">
+    </div>
 
     <form id="inputForm">
       <div class="menu">
