Added Dairy-Free and Gluten-Free options

--- a/src/index.html
+++ b/src/index.html
@@ -61,11 +61,12 @@
         <div class="menu">
           <label for="health">Select health consideration:</label>
           <select name="health" id="health" class="option">
-            <option></option>
             <option value="" selected>Health Option</option>
             <option value="vegetarian">Vegetarian</option>
             <option value="vegan">Vegan</option>
             <option value="pescatarian">Pescatarian</option>
+            <option value="dairy-free">Dairy-Free</option>
+            <option value="gluten-free">Gluten-Free</option>
           </select>
         </div>
         <div class="menu">
