add image and fix typos

--- a/src/about.html
+++ b/src/about.html
@@ -41,7 +41,7 @@
       </div>
       <div class="container">
         <h2><a href="https://github.com/geoffreygao1" target="_blank">Geoff</a></h2>
-        <p>Geoff's doesn't know this, but when I say his name, I'm saying it with a "J".</p>
+        <p>Geoff doesn't know this, but when I say his name, I'm saying it with a "J".</p>
       </div>
       <div class="container">
         <h2><a href="https://github.com/nsncowan" target="_blank">Noah</a></h2>
@@ -53,6 +53,9 @@
         <p>Richelle Thorpe is the star and subject of the 2009 biographical comedy-drama, Julie & Julia. Don't ask her
           about the Oscar snub unless you want a front-row seat to an avalanch of vitriol that, even for adults, is
           pretty shocking.</p>
+      </div>
+      <div class="container">
+        <h2><img src="./src/img/chef.png" alt="chef"></h2>
       </div>
     </div>
   </div>
