--- a/src/contact.html
+++ b/src/contact.html
@@ -31,7 +31,7 @@
 
       <div class="layer">
         <h2> WE ARE HUNGRY TO HEAR FROM YOU!</h1>
-          <h3>Email us with any questions of inquiries. We would be happy to answer your questions and hear any
+          <h3>Email us with any questions or inquiries. We would be happy to answer your questions and hear any
             feedback.</h3>
           <form class="form-input">
             <label for="name">NAME:</label>
