fix image in about

--- a/src/about.html
+++ b/src/about.html
@@ -55,7 +55,7 @@
           pretty shocking.</p>
       </div>
       <div class="container">
-        <h2><img src="./src/img/chef.png" alt="chef"></h2>
+        <h2><img src='https://cdn4.iconfinder.com/data/icons/restaurant-glyph-3/64/cook-chef-kitchen-cooker-food_and_restaurant-professions_and_jobs-user-avatar-restaurant-cooking-256.png' alt="chef"></h2>
       </div>
     </div>
   </div>
