update favorites.html and styles.css'

--- a/src/favorites.html
+++ b/src/favorites.html
@@ -30,7 +30,7 @@
 
       <div class="row">
         <div class="column" id="favorites">
-          <h1 class="fave">Your saved favorites!</h1>
+          <h1 id="fave">Your saved favorites!</h1>
           <div class="container2" id="showResponse"></div>
         </div>
 
